removed visibilty for display on css, fully fixes (hopefull) bug with popup islands...added more to README for notes/todo.

--- a/style_board2.css
+++ b/style_board2.css
@@ -99,62 +99,50 @@ body {
 }
 
 #bigblock1{
-    visibility: visible;
     background-image: url("resources/Image files/special_island1.png");
     margin: 4px 3px 2.5px 130px;
 }
 #bigblock2{
-    visibility: hidden;
     background-image: url("resources/Image files/special_island2.png");
     margin: 4px 3px 2.5px 390px;
 }
 #bigblock3{
-    visibility: hidden;
     background-image: url("resources/Image files/special_island3.png");
     margin: 4px 3px 2.5px 565px;
 }
 #bigblock4{
-    visibility: hidden;
     background-image: url("resources/Image files/special_island4.png");
     margin: 77px 3px 2.5px 390px;
 }
 #bigblock5{
-    visibility: hidden;
     background-image: url("resources/Image files/special_island5.png");
     margin: 187px 3px 2.5px 217px;
 }
 #bigblock6{
-    visibility: hidden;
     background-image: url("resources/Image files/special_island6.png");
     margin: 150px 3px 2.5px 565px;
 }
 #bigblock7{
-    visibility: hidden;
     background-image: url("resources/Image files/special_island7.png");
     margin: 223px 3px 2.5px 43px;
 }
 #bigblock8{
-    visibility: hidden;
     background-image: url("resources/Image files/special_island8.png");
     margin: 223px 3px 2.5px 390px;
 }
 #bigblock9{
-    visibility: hidden;
     background-image: url("resources/Image files/special_island9.png");
     margin: 295px 3px 2.5px 304px;
 }
 #bigblock10{
-    visibility: hidden;
     background-image: url("resources/Image files/special_island10.png");
     margin: 295px 3px 2.5px 565px;
 }
 #bigblock11{
-    visibility: hidden;
     background-image: url("resources/Image files/special_island11.png");
     margin: 365px 3px 2.5px 130px;
 }
 #bigblock12{
-    visibility: hidden;
     background-image: url("resources/Image files/special_island12.png");
     margin: 365px 3px 2.5px 390px;
 }
